# genie_public

./: .gitignore
RoLA_Compliance/: .gitignore  LICENCE.txt  README.md  compliance_fine_tuning_gemma.ipynb  pyproject.toml
RoLA_Compliance/checkpoints/adapters/: adapter_config.json
RoLA_Compliance/data/: CHERRY_compliance.csv  CHERRY_compliance_backup2.csv  compliance_prep_data.ipynb  compliance_qna_generator.ipynb  valid.jsonl
RoLA_IMDG/: requirements.txt  .gitignore  README.md  lora_fine_tuning.ipynb  pyproject.toml  workflow.drawio
RoLA_IMDG/checkpoints/adapters/: adapter_config.json
RoLA_IMDG/data/: IMDG.csv  valid.jsonl
SIGenie/: .env_sample  Import_JSON_BL1.py  Import_JSON_BL2.py  Import_JSON_Booking.py  Import_JSON_SI.py  draft_SI_with_vectorDB.ipynb  json_bkg.py  json_bl.py  json_si.py  main.py  si_generator.ipynb
SIGenie/bkg/: bkg_CHERRY20240911091198.json  bkg_CHERRY20240911091199.json  bkg_CHERRY20240911091202.json  bkg_CHERRY20240911091204.json  bkg_CHERRY202409119091200.json  booking_CHERRY20240911091201.json  booking_CHERRY20240911091203.json
SIGenie/bkg_data/: bkg_CHERRY202409072244.json  bkg_CHERRY202409073993.json  bkg_CHERRY202409074722.json  bkg_CHERRY202409074766.json  bkg_CHERRY202409075029.json  bkg_CHERRY202409075458.json  bkg_CHERRY202409076101.json  bkg_CHERRY202409077289.json  bkg_CHERRY202409077881.json  bkg_CHERRY202409081176.json  bkg_CHERRY202409082713.json  bkg_CHERRY202409082771.json  bkg_CHERRY202409083634.json  bkg_CHERRY202409083977.json  bkg_CHERRY202409086648.json  bkg_CHERRY202409087855.json  bkg_CHERRY202409088540.json  bkg_CHERRY202409089798.json  bkg_CHERRY202409091131.json  bkg_CHERRY202409091940.json  bkg_CHERRY202409093347.json  bkg_CHERRY202409093462.json  bkg_CHERRY202409093759.json  bkg_CHERRY202409094536.json  bkg_CHERRY202409095786.json  bkg_CHERRY202409096936.json  bkg_CHERRY202409097157.json  bkg_CHERRY202409097544.json  bkg_CHERRY202409097608.json  bkg_CHERRY202409098860.json  bkg_CHERRY202409098960.json  bkg_CHERRY202409099558.json  bkg_CHERRY202409101059.json  bkg_CHERRY202409101565.json  bkg_CHERRY202409102255.json  bkg_CHERRY202409102372.json  bkg_CHERRY202409102741.json  bkg_CHERRY202409103050.json  bkg_CHERRY202409104003.json  bkg_CHERRY202409104327.json  (+943 more)
SIGenie/bl/: si_CHERRY20240911091201.json  si_CHERRY202409119091200.json
SIGenie/bl_sample/: bl_sample_1.json  bl_sample_10.json  bl_sample_100.json  bl_sample_101.json  bl_sample_102.json  bl_sample_103.json  bl_sample_104.json  bl_sample_105.json  bl_sample_106.json  bl_sample_107.json  bl_sample_108.json  bl_sample_109.json  bl_sample_11.json  bl_sample_110.json  bl_sample_111.json  bl_sample_112.json  bl_sample_113.json  bl_sample_114.json  bl_sample_115.json  bl_sample_116.json  bl_sample_117.json  bl_sample_118.json  (+698 more)
news_genie/: main.py  pyproject.toml  requirements.txt
news_genie/agents/: content_validator.py  report_generator.py  web_search.py
news_genie/data/: faiss_index.pkl  text_data.pkl
news_genie/utils/: vector_store.py
self_learning_genie/: pyproject.toml  sl_genie_1.py  sl_genie_2.py  sl_genie_3.py  sl_genie_4_active.py  sl_genie_5.py  sl_imdg_genie_1.py
self_learning_genie/index_imdg/index/: index.pkl
(+1284 files in other folders)
