[tool.poetry]
name = "lora fine-tuning"
version = "0.1.0"
description = ""
authors = ["Kwang Yong Jung <gyjong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
mlx = "^0.17.3"
mlx-lm = "^0.18.2"
transformers = "^4.44.2"
huggingface-hub = "^0.25.0"
datasets = "^3.0.0"
pypdf2 = "^3.0.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
