[tool.poetry]
name = "news-genie"
version = "0.1.0"
description = ""
authors = ["Kwang Yong Jung <gyjong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
langgraph = "^0.2.19"
openai = "^1.44.1"
faiss-cpu = "^1.8.0.post1"
streamlit = "^1.38.0"
python-dotenv = "^1.0.1"
tavily-python = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
