[tool.poetry]
name = "self-learning-genie"
version = "0.1.0"
description = ""
authors = ["Kwang Yong Jung <gyjong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
streamlit = "^1.36.0"
pandas = "^2.0.0"
matplotlib = "^3.9.1"
networkx = "^3.3"
langchain-groq = "^0.1.6"
langchain-openai = "^0.0.8"
langchain-anthropic = "^0.1.20"
langchain-google-genai = "^1.0.7"
langchain-experimental = "^0.0.62"
neo4j = "^5.23.0"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
